Update: Added CSV data and code to transform into an Array of Objects.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animation Throwdown Combos</title>
     <link  rel="stylesheet" href="/style.css" type="text/css">
-</head>
+    <script src="/script.js"></script>
 <body>
     <div aria-label="Dropdown Bars">
         <label for="skillToCheck">Choose a Skill: </label>
@@ -14,30 +14,30 @@
             id="skillToCheck"
             aria-label="Skills Dropdown Menu"
         >
-            <option value="jab">Jab</option>
-            <option value="punch">Punch</option>
-            <option value="sturdy">Sturdy</option>
-            <option value="payback">Payback</option>
-            <option value="cripple">Cripple</option>
-            <option value="cripple_all">Cripple All</option>
-            <option value="gas">Gas</option>
-            <option value="shield">Shield</option>
-            <option value="shield_all">Shield All</option>
-            <option value="boost">Boost</option>
-            <option value="recover">Recover</option>
-            <option value="cheer">Cheer</option>
-            <option value="cheer_all">Cheer All</option>
-            <option value="heal">Heal</option>
-            <option value="heal_all">Heal All</option>
-            <option value="leech">Leech</option>
-            <option value="motivate">Motivate</option>
-            <option value="bomb">Bomb</option>
-            <option value="crazed" selected="selected">Crazed</option>
-            <option value="hijack">Hijack</option>
-            <option value="bodyguard">Bodyguard</option>
-            <option value="enlarge">Enlarge</option>
-            <option value="bunker">Bunker</option>
-            <option value="burn">Burn</option>
+            <option value="Jab">Jab</option>
+            <option value="Punch">Punch</option>
+            <option value="Sturdy">Sturdy</option>
+            <option value="Payback">Payback</option>
+            <option value="Cripple">Cripple</option>
+            <option value="Cripple All">Cripple All</option>
+            <option value="Gas">Gas</option>
+            <option value="Shield">Shield</option>
+            <option value="Shield All">Shield All</option>
+            <option value="Boost">Boost</option>
+            <option value="Recover">Recover</option>
+            <option value="Cheer">Cheer</option>
+            <option value="Cheer All">Cheer All</option>
+            <option value="Heal">Heal</option>
+            <option value="Heal All">Heal All</option>
+            <option value="Leech">Leech</option>
+            <option value="Motivate">Motivate</option>
+            <option value="Bomb">Bomb</option>
+            <option value="Crazed" selected="selected">Crazed</option>
+            <option value="Hijack">Hijack</option>
+            <option value="Bodyguard">Bodyguard</option>
+            <option value="Enlarge">Enlarge</option>
+            <option value="Bunker">Bunker</option>
+            <option value="Burn">Burn</option>
         </select>
         <button onclick="filterByProperty('skillToCheck')">Submit</button>
         <label for="characterToCheck">Choose a Character: </label>
@@ -46,21 +46,20 @@
             id="characterToCheck"
             aria-label="Characters Dropdown Menu"
         >
-            <option value="amy">Amy</option>
-            <option value="bender">Bender</option>
-            <option value="bill">Bill</option>
-            <option value="bob">Bob</option>
-            <option value="bobby">Bobby</option>
-            <option value="boomhauer">Boomhauer</option>
-            <option value="brian">Brian</option>
-            <option value="bullock">Bullock</option>
-            <option value="cheryl_tunt">Cheryl Tunt</option>
-            <option value="chris">Chris</option>
+            <option value="Amy">Amy</option>
+            <option value="Bender">Bender</option>
+            <option value="Bill">Bill</option>
+            <option value="Bob">Bob</option>
+            <option value="Bobby">Bobby</option>
+            <option value="Boomhauer">Boomhauer</option>
+            <option value="Brian">Brian</option>
+            <option value="Bullock">Bullock</option>
+            <option value="Cheryl Tunt">Cheryl Tunt</option>
+            <option value="Chris">Chris</option>
         </select>
         <button onclick="filterByProperty('characterToCheck')">Submit</button>
     </div>
 
     <h1 id="result">hello</h1>
 </body>
-<script src="/script.js"></script>
 </html>
