Update: Added remaining characters to select element.

--- a/index.html
+++ b/index.html
@@ -14,30 +14,30 @@
             id="skillToCheck"
             aria-label="Skills Dropdown Menu"
         >
-            <option value="Jab">Jab</option>
-            <option value="Punch">Punch</option>
-            <option value="Sturdy">Sturdy</option>
-            <option value="Payback">Payback</option>
-            <option value="Cripple">Cripple</option>
-            <option value="Cripple All">Cripple All</option>
-            <option value="Gas">Gas</option>
-            <option value="Shield">Shield</option>
-            <option value="Shield All">Shield All</option>
-            <option value="Boost">Boost</option>
-            <option value="Recover">Recover</option>
-            <option value="Cheer">Cheer</option>
-            <option value="Cheer All">Cheer All</option>
-            <option value="Heal">Heal</option>
-            <option value="Heal All">Heal All</option>
-            <option value="Leech">Leech</option>
-            <option value="Motivate">Motivate</option>
-            <option value="Bomb">Bomb</option>
-            <option value="Crazed" selected="selected">Crazed</option>
-            <option value="Hijack">Hijack</option>
             <option value="Bodyguard">Bodyguard</option>
-            <option value="Enlarge">Enlarge</option>
+            <option value="Bomb">Bomb</option>
+            <option value="Boost">Boost</option>
             <option value="Bunker">Bunker</option>
             <option value="Burn">Burn</option>
+            <option value="Cheer">Cheer</option>
+            <option value="Cheer All">Cheer All</option>
+            <option value="Crazed" selected="selected">Crazed</option>
+            <option value="Cripple">Cripple</option>
+            <option value="Cripple All">Cripple All</option>
+            <option value="Enlarge">Enlarge</option>
+            <option value="Gas">Gas</option>
+            <option value="Heal">Heal</option>
+            <option value="Heal All">Heal All</option>
+            <option value="Hijack">Hijack</option>
+            <option value="Jab">Jab</option>
+            <option value="Leech">Leech</option>
+            <option value="Motivate">Motivate</option>
+            <option value="Payback">Payback</option>
+            <option value="Punch">Punch</option>
+            <option value="Recover">Recover</option>
+            <option value="Shield">Shield</option>
+            <option value="Shield All">Shield All</option>
+            <option value="Sturdy">Sturdy</option>
         </select>
         <button onclick="filterByProperty('skillToCheck')">Submit</button>
         <label for="characterToCheck">Choose a Character: </label>
@@ -56,6 +56,43 @@
             <option value="Bullock">Bullock</option>
             <option value="Cheryl Tunt">Cheryl Tunt</option>
             <option value="Chris">Chris</option>
+            <option value="Cleveland Brown">Cleveland Brown</option>
+            <option value="Cotton">Cotton</option>
+            <option value="Dale">Dale</option>
+            <option value="Dr. Zoidberg">Dr. Zoidberg</option>
+            <option value="Francine">Francine</option>
+            <option value="Fry">Fry</option>
+            <option value="Gayle Genarro">Gayle Genarro</option>
+            <option value="Gene">Gene</option>
+            <option value="Hank">Hank</option>
+            <option value="Hermes">Hermes</option>
+            <option value="Jeff">Jeff</option>
+            <option value="Jimmy Jr.">Jimmy Jr.</option>
+            <option value="Joe Swanson">Joe Swanson</option>
+            <option value="Kif Kroker">Kif Kroker</option>
+            <option value="Lana">Lana</option>
+            <option value="Leela">Leela</option>
+            <option value="Linda Belcher">Linda Belcher</option>
+            <option value="Lois">Lois</option>
+            <option value="Louise">Louise</option>
+            <option value="Luanne">Luanne</option>
+            <option value="Meg">Meg</option>
+            <option value="Mort">Mort</option>
+            <option value="Pam Poovey">Pam Poovey</option>
+            <option value="Peggy">Peggy</option>
+            <option value="Peter">Peter</option>
+            <option value="Professor Farnsworth">Professor Farnsworth</option>
+            <option value="Quagmire">Quagmire</option>
+            <option value="Ray Gillette">Ray Gillette</option>
+            <option value="Roger">Roger</option>
+            <option value="Snot">Snot</option>
+            <option value="Stan">Stan</option>
+            <option value="Sterling Archer">Sterling Archer</option>
+            <option value="Steve">Steve</option>
+            <option value="Stewie">Stewie</option>
+            <option value="Teddy">Teddy</option>
+            <option value="Tina">Tina</option>
+            <option value="Zapp Brannigan">Zapp Brannigan</option>
         </select>
         <button onclick="filterByProperty('characterToCheck')">Submit</button>
     </div>
