--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animation Throwdown Combos</title>
     <link  rel="stylesheet" href="/style.css" type="text/css">
+    <script src="/combo-data.js"></script>
     <script src="/script.js"></script>
 <body>
     <div aria-label="Dropdown Bars">
